updated site name  added dzo logo and updated some of portfolio. some need pics that match

--- a/css/style.css
+++ b/css/style.css
@@ -1220,5 +1220,8 @@ h1, h2, h3, h4, h5, h6, figure {
 .js .animate-box {
   opacity: 0;
 }
+.dzo_logo {
+  width: 25px;
+  height: 25px;
 
 /*# sourceMappingURL=style.css.map */
